--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_45">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
@@ -13,10 +14,12 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Users/peggy/eclipse-workspace/SearcHair/WebContent/WEB-INF/lib/gson-2.8.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/peggy/eclipse-workspace/SearcHair/WebContent/WEB-INF/lib/jsoup-1.10.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/peggy/eclipse-workspace/SearcHair/WebContent/WEB-INF/lib/mysql-connector-java-3.1.8-bin.jar"/>
-	<classpathentry kind="lib" path="C:/Users/peggy/eclipse-workspace/SearcHair/WebContent/WEB-INF/lib/smack.jar"/>
-	<classpathentry kind="lib" path="C:/Users/peggy/eclipse-workspace/SearcHair/WebContent/WEB-INF/lib/smackx-3.2.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/activation-1.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gson-2.8.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.mail.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsoup-1.10.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-3.1.8-bin.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/smack.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/smackx-3.2.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
