--- a/.classpath
+++ b/.classpath
@@ -18,8 +18,10 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gson-2.8.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.mail.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsoup-1.10.3.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-3.1.8-bin.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/smack.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/smackx-3.2.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json-lib-2.4-jdk15.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.0.8-bin.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.30.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
