feat: hair-match servlet and api

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,71 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>SearcHair</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
-  <servlet>
-    <servlet-name>LoginServlet</servlet-name>
-    <servlet-class>user.LoginServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>RegisterServlet</servlet-name>
-    <servlet-class>user.RegisterServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ForgetPasswordServlet</servlet-name>
-    <servlet-class>user.ForgetPasswordServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ResetPasswordServlet</servlet-name>
-    <servlet-class>user.ResetPasswordServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>UpdatePasswordServlet</servlet-name>
-    <servlet-class>user.UpdatePasswordServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>SearchServlet</servlet-name>
-    <servlet-class>search.SearchServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>SearchOneServlet</servlet-name>
-    <servlet-class>search.SearchOneServlet</servlet-class>
-  </servlet>
-  
-  
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	id="WebApp_ID" version="3.1">
+	<display-name>SearcHair</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+	</welcome-file-list>
+	<servlet>
+		<servlet-name>LoginServlet</servlet-name>
+		<servlet-class>user.LoginServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>RegisterServlet</servlet-name>
+		<servlet-class>user.RegisterServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>ForgetPasswordServlet</servlet-name>
+		<servlet-class>user.ForgetPasswordServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>ResetPasswordServlet</servlet-name>
+		<servlet-class>user.ResetPasswordServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>UpdatePasswordServlet</servlet-name>
+		<servlet-class>user.UpdatePasswordServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>SearchServlet</servlet-name>
+		<servlet-class>search.SearchServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>SearchOneServlet</servlet-name>
+		<servlet-class>search.SearchOneServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>HairMatchServlet</servlet-name>
+		<servlet-class>hairMatch.HairMatchServlet</servlet-class>
+	</servlet>
 
-<servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/api-user-login</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-        <servlet-name>RegisterServlet</servlet-name>
-        <url-pattern>/api-user-register</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-        <servlet-name>ForgetPasswordServlet</servlet-name>
-        <url-pattern>/api-user-password-forget</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-        <servlet-name>ResetPasswordServlet</servlet-name>
-        <url-pattern>/api-user-password-reset</url-pattern>
-  </servlet-mapping>
-   <servlet-mapping>
-        <servlet-name>UpdatePasswordServlet</servlet-name>
-        <url-pattern>/api-user-password-update</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-        <servlet-name>SearchServlet</servlet-name>
-        <url-pattern>/api-search</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-        <servlet-name>SearchOneServlet</servlet-name>
-        <url-pattern>/api-search-detail</url-pattern>
-  </servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/api-user-login</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>RegisterServlet</servlet-name>
+		<url-pattern>/api-user-register</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ForgetPasswordServlet</servlet-name>
+		<url-pattern>/api-user-password-forget</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ResetPasswordServlet</servlet-name>
+		<url-pattern>/api-user-password-reset</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UpdatePasswordServlet</servlet-name>
+		<url-pattern>/api-user-password-update</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>SearchServlet</servlet-name>
+		<url-pattern>/api-search</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>SearchOneServlet</servlet-name>
+		<url-pattern>/api-search-detail</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>HairMatchServlet</servlet-name>
+		<url-pattern>/api-hairMatch</url-pattern>
+	</servlet-mapping>
 </web-app>
