feat: deal error page

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,105 +1,117 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>SearcHair</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-  </welcome-file-list>
-  <servlet>
-    <servlet-name>LoginServlet</servlet-name>
-    <servlet-class>user.LoginServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>RegisterServlet</servlet-name>
-    <servlet-class>user.RegisterServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ForgetPasswordServlet</servlet-name>
-    <servlet-class>user.ForgetPasswordServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ResetPasswordServlet</servlet-name>
-    <servlet-class>user.ResetPasswordServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>UpdatePasswordServlet</servlet-name>
-    <servlet-class>user.UpdatePasswordServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>SearchServlet</servlet-name>
-    <servlet-class>search.SearchServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>SearchOneServlet</servlet-name>
-    <servlet-class>search.SearchOneServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>CalendarNewServlet</servlet-name>
-    <servlet-class>calendar.CalendarNewServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>CalendarDeleteServlet</servlet-name>
-    <servlet-class>calendar.CalendarDeleteServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>CalendarUpdateServlet</servlet-name>
-    <servlet-class>calendar.CalendarUpdateServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>CalendarGetServlet</servlet-name>
-    <servlet-class>calendar.CalendarGetServlet</servlet-class>
-  </servlet>
-  <servlet>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	id="WebApp_ID" version="3.1">
+	<display-name>SearcHair</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+	</welcome-file-list>
+	<servlet>
+		<servlet-name>LoginServlet</servlet-name>
+		<servlet-class>user.LoginServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>RegisterServlet</servlet-name>
+		<servlet-class>user.RegisterServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>ForgetPasswordServlet</servlet-name>
+		<servlet-class>user.ForgetPasswordServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>ResetPasswordServlet</servlet-name>
+		<servlet-class>user.ResetPasswordServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>UpdatePasswordServlet</servlet-name>
+		<servlet-class>user.UpdatePasswordServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>SearchServlet</servlet-name>
+		<servlet-class>search.SearchServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>SearchOneServlet</servlet-name>
+		<servlet-class>search.SearchOneServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>CalendarNewServlet</servlet-name>
+		<servlet-class>calendar.CalendarNewServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>CalendarDeleteServlet</servlet-name>
+		<servlet-class>calendar.CalendarDeleteServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>CalendarUpdateServlet</servlet-name>
+		<servlet-class>calendar.CalendarUpdateServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>CalendarGetServlet</servlet-name>
+		<servlet-class>calendar.CalendarGetServlet</servlet-class>
+	</servlet>
+	<servlet>
 		<servlet-name>HairMatchServlet</servlet-name>
 		<servlet-class>hairMatch.HairMatchServlet</servlet-class>
-</servlet>
-  
- 
-<servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/api-user-login</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-        <servlet-name>RegisterServlet</servlet-name>
-        <url-pattern>/api-user-register</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-        <servlet-name>ForgetPasswordServlet</servlet-name>
-        <url-pattern>/api-user-password-forget</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-        <servlet-name>ResetPasswordServlet</servlet-name>
-        <url-pattern>/api-user-password-reset</url-pattern>
-  </servlet-mapping>
-   <servlet-mapping>
-        <servlet-name>UpdatePasswordServlet</servlet-name>
-        <url-pattern>/api-user-password-update</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-        <servlet-name>SearchServlet</servlet-name>
-        <url-pattern>/api-search</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-        <servlet-name>SearchOneServlet</servlet-name>
-        <url-pattern>/api-search-detail</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-        <servlet-name>CalendarNewServlet</servlet-name>
-        <url-pattern>/api-calendar-new</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-        <servlet-name>CalendarDeleteServlet</servlet-name>
-        <url-pattern>/api-calendar-delete</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-        <servlet-name>CalendarUpdateServlet</servlet-name>
-        <url-pattern>/api-calendar-update</url-pattern>
-  </servlet-mapping>
-   <servlet-mapping>
-        <servlet-name>CalendarGetServlet</servlet-name>
-        <url-pattern>/api-calendar</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-	<servlet-name>HairMatchServlet</servlet-name>
+	</servlet>
+
+
+	<servlet-mapping>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/api-user-login</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>RegisterServlet</servlet-name>
+		<url-pattern>/api-user-register</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ForgetPasswordServlet</servlet-name>
+		<url-pattern>/api-user-password-forget</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ResetPasswordServlet</servlet-name>
+		<url-pattern>/api-user-password-reset</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UpdatePasswordServlet</servlet-name>
+		<url-pattern>/api-user-password-update</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>SearchServlet</servlet-name>
+		<url-pattern>/api-search</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>SearchOneServlet</servlet-name>
+		<url-pattern>/api-search-detail</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>CalendarNewServlet</servlet-name>
+		<url-pattern>/api-calendar-new</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>CalendarDeleteServlet</servlet-name>
+		<url-pattern>/api-calendar-delete</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>CalendarUpdateServlet</servlet-name>
+		<url-pattern>/api-calendar-update</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>CalendarGetServlet</servlet-name>
+		<url-pattern>/api-calendar</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>HairMatchServlet</servlet-name>
 		<url-pattern>/api-hairMatch</url-pattern>
 	</servlet-mapping>
+
+	<error-page>
+		<error-code>404</error-code>
+		<location>/notFound.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/notFound.jsp</location>
+	</error-page>
 </web-app>
