--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -63,7 +63,10 @@
 		<servlet-name>ChatbotServlet</servlet-name>
 		<servlet-class>chatbot.ChatbotServlet</servlet-class>
 	</servlet>
-
+	<servlet>
+		<servlet-name>FavoriteServlet</servlet-name>
+		<servlet-class>favorite.FavoriteServlet</servlet-class>
+	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>LoginServlet</servlet-name>
@@ -116,6 +119,10 @@
 	<servlet-mapping>
 		<servlet-name>HairMatchServlet</servlet-name>
 		<url-pattern>/api-hairMatch</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>FavoriteServlet</servlet-name>
+		<url-pattern>/api-favorite-new</url-pattern>
 	</servlet-mapping>
 
 	<error-page>
