feat: finish product's new, update and delete

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -76,6 +76,14 @@
 		<servlet-name>FavoriteGetServlet</servlet-name>
 		<servlet-class>favorite.FavoriteGetServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>SettingServlet</servlet-name>
+		<servlet-class>setting.SettingServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>ProductServlet</servlet-name>
+		<servlet-class>search.ProductServlet</servlet-class>
+	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>LoginServlet</servlet-name>
@@ -140,6 +148,14 @@
 	<servlet-mapping>
 		<servlet-name>FavoriteGetServlet</servlet-name>
 		<url-pattern>/api-favorite</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>SettingServlet</servlet-name>
+		<url-pattern>/api-setting</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ProductServlet</servlet-name>
+		<url-pattern>/api-search-product</url-pattern>
 	</servlet-mapping>
 
 	<error-page>
