--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -80,6 +80,11 @@
 		<servlet-name>SettingServlet</servlet-name>
 		<servlet-class>setting.SettingServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>ProductServlet</servlet-name>
+		<servlet-class>search.ProductServlet</servlet-class>
+	</servlet>
+
 
 	<servlet-mapping>
 		<servlet-name>LoginServlet</servlet-name>
@@ -148,6 +153,10 @@
 	<servlet-mapping>
 		<servlet-name>SettingServlet</servlet-name>
 		<url-pattern>/api-setting</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ProductServlet</servlet-name>
+		<url-pattern>/api-search-product</url-pattern>
 	</servlet-mapping>
 
 	<error-page>
